# binance-ws-rust

./: .gitignore  Cargo.toml  README.md
config/: log4rs.yml
src/: main.rs
