[package]
name = "bnce-ws"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3"
log = "0.4.17"
env_logger = "0.9.1"
url = "2.3.1"
tungstenite = "0.17.3"
tokio = { version = "1.21.2", features = ["full"] }
tokio-tungstenite = { version = "*", features = ["native-tls"] }
